--- a/CSS Layouts/style.css
+++ b/CSS Layouts/style.css
@@ -13,7 +13,7 @@ body {
   position: relative;
 }
 .container {
-  width: 1200px;
+  width: 1500px;
   /* margin-left: auto;
   margin-right: auto; */
   margin: 0 auto;
@@ -284,9 +284,9 @@ h2::before {
 
 /* Floats */
 
+/*
 .author-img {
   float: left;
-  /* margin-right: 10px; */
   margin-bottom: 10px;
 }
 .author {
@@ -301,10 +301,10 @@ h1 {
 nav {
   float: right;
 }
-/* .clear {
+ .clear {
   clear: both;
 } */
-
+/*
 .clear-fix::after {
   content: "";
   clear: both;
@@ -324,4 +324,61 @@ aside {
 
 footer {
   clear: both;
+}
+*/
+
+/* Flexbox */
+
+.main-header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.author-box{
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 10px;
+  margin-bottom: 15px;
+}
+
+.author{
+  margin:0;
+}
+
+.related-post{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  /* margin-bottom: 30px; */
+}
+
+.related-author{
+  margin: 0;
+  font-weight: normal;
+  font-style: italic;
+  font-size: 14px;
+}
+
+.related-link:link{
+  font-size: 17px;
+  font-weight: bold;
+  font-style: normal;
+  margin-bottom: 5px;
+  display: block;
+} 
+
+.row{
+  display: flex;
+  gap: 75px;
+  margin-bottom: 60px;
+  align-items: flex-start;
+}
+
+aside{
+ flex-basis: 500px;
+}
+main{
+  flex-basis: 925px;
+  margin-bottom: 0;
 }
