--- a/Design/Responsive/style.css
+++ b/Design/Responsive/style.css
@@ -345,6 +345,9 @@ footer {
   .blends {
     grid-template-columns: 1fr;
   }
+  .blends div{
+    margin-bottom: 20px;
+  }
 
   footer {
     font-size: 12px;
